k8s/templates/namespace.lib.yml
#@ load("@ytt:data", "data")
#@ load("utils.star", "utils")

#@ def getNamespace(project):
apiVersion: v1
kind: Namespace
metadata:
  name: #@ utils.namespaceName(project)
  labels: #@ utils.defaultLabels("namespace", project)
#@ end
